given the addl complexity of having to add an Authorization header to test it in a web browser (having to install ModHeader, and not forgetting to undo it afterwards), all there to be no api key for NLLB if the user just plans to use it from their local machine. Also, incorporated some addl help/instructions to the help file for NLLB as a result of addl beta testing.

--- a/installer/EcTranslators64bitMM/EcTranslators_MergeModule.wxs
+++ b/installer/EcTranslators64bitMM/EcTranslators_MergeModule.wxs
@@ -501,6 +501,7 @@
 									<File Id="nt_image007.jpg" Name="image007.jpg" Source="..\..\redist\Help\NLLB_Translate_Plug-in_About_box_files\image007.jpg"/>
 									<File Id="nt_image008.jpg" Name="image008.jpg" Source="..\..\redist\Help\NLLB_Translate_Plug-in_About_box_files\image008.jpg"/>
 									<File Id="nt_image009.jpg" Name="image009.jpg" Source="..\..\redist\Help\NLLB_Translate_Plug-in_About_box_files\image009.jpg"/>
+									<File Id="nt_image010.jpg" Name="image010.jpg" Source="..\..\redist\Help\NLLB_Translate_Plug-in_About_box_files\image010.jpg"/>
 									<File Id="nt_image012.jpg" Name="image012.jpg" Source="..\..\redist\Help\NLLB_Translate_Plug-in_About_box_files\image012.jpg"/>
 									<File Id="nt_image016.jpg" Name="image016.jpg" Source="..\..\redist\Help\NLLB_Translate_Plug-in_About_box_files\image016.jpg"/>
 									<File Id="nt_image021.jpg" Name="image021.jpg" Source="..\..\redist\Help\NLLB_Translate_Plug-in_About_box_files\image021.jpg"/>
