--- a/installer/EC_40_MM/EC_40_MergeModule.wxs
+++ b/installer/EC_40_MM/EC_40_MergeModule.wxs
@@ -278,7 +278,13 @@
                     <Class Id="{FBC7B81D-39A4-3DC6-A085-567D325146A2}" Context="InprocServer32" Description="SilEncConverters40.MetaCmpdAutoConfigDialog" ThreadingModel="both" ForeignServer="mscoree.dll">
                         <ProgId Id="SilEncConverters40.MetaCmpdAutoConfigDialog" Description="SilEncConverters40.MetaCmpdAutoConfigDialog" />
                     </Class>
-                    <File Id="SilEncConverters40.dll" KeyPath="yes" Source="..\..\output\Win32\release\SilEncConverters40.dll"/>
+					<Class Id="{DBE5F638-49E5-4D23-A7A5-EC83044C6A39}" Context="InprocServer32" Description="SilEncConverters40.NetRegexEncConverter" ThreadingModel="both" ForeignServer="mscoree.dll">
+						<ProgId Id="SilEncConverters40.NetRegexEncConverter" Description="SilEncConverters40.NetRegexEncConverter" />
+					</Class>
+					<Class Id="{A4999E32-8291-4B58-AC5C-8100A39CE0FD}" Context="InprocServer32" Description="SilEncConverters40.NetRegexEncConverterConfig" ThreadingModel="both" ForeignServer="mscoree.dll">
+						<ProgId Id="SilEncConverters40.NetRegexEncConverterConfig" Description="SilEncConverters40.NetRegexEncConverterConfig" />
+					</Class>
+					<File Id="SilEncConverters40.dll" KeyPath="yes" Source="..\..\output\Win32\release\SilEncConverters40.dll"/>
 					<RegistryValue Root="HKCR" Key="CLSID\{0162B174-E479-44CD-BEE8-CFA9BC06BF92}\Implemented Categories\{62C8FE65-4EBB-45e7-B440-6E39B2CDBF29}" Value="" Type="string" Action="write" />
                     <RegistryValue Root="HKCR" Key="CLSID\{0162B174-E479-44CD-BEE8-CFA9BC06BF92}\InprocServer32\4.0.0.0" Name="Class" Value="SilEncConverters40.EncConverters" Type="string" Action="write" />
                     <RegistryValue Root="HKCR" Key="CLSID\{0162B174-E479-44CD-BEE8-CFA9BC06BF92}\InprocServer32\4.0.0.0" Name="Assembly" Value="SilEncConverters40, Version=4.0.0.0, Culture=neutral, PublicKeyToken=f1447bae1e63f485" Type="string" Action="write" />
@@ -454,7 +460,27 @@
                     <RegistryValue Root="HKCR" Key="Record\{6EAC0C98-FF43-3780-AE79-B291998FED12}\4.0.0.0" Name="Assembly" Value="SilEncConverters40, Version=4.0.0.0, Culture=neutral, PublicKeyToken=f1447bae1e63f485" Type="string" Action="write" />
                     <RegistryValue Root="HKCR" Key="Record\{6EAC0C98-FF43-3780-AE79-B291998FED12}\4.0.0.0" Name="RuntimeVersion" Value="v4.0.30319" Type="string" Action="write" />
                     <RegistryValue Root="HKCR" Key="Record\{6EAC0C98-FF43-3780-AE79-B291998FED12}\4.0.0.0" Name="CodeBase" Value="file:///[#SilEncConverters40.dll]" Type="string" Action="write" />
-                </Component>
+
+					<RegistryValue Root="HKCR" Key="CLSID\{A4999E32-8291-4B58-AC5C-8100A39CE0FD}\Implemented Categories\{62C8FE65-4EBB-45e7-B440-6E39B2CDBF29}" Value="" Type="string" Action="write" />
+					<RegistryValue Root="HKCR" Key="CLSID\{A4999E32-8291-4B58-AC5C-8100A39CE0FD}\InprocServer32\4.0.0.0" Name="Class" Value="SilEncConverters40.NetRegexEncConverterConfig" Type="string" Action="write" />
+					<RegistryValue Root="HKCR" Key="CLSID\{A4999E32-8291-4B58-AC5C-8100A39CE0FD}\InprocServer32\4.0.0.0" Name="Assembly" Value="SilEncConverters40, Version=4.0.0.0, Culture=neutral, PublicKeyToken=f1447bae1e63f485" Type="string" Action="write" />
+					<RegistryValue Root="HKCR" Key="CLSID\{A4999E32-8291-4B58-AC5C-8100A39CE0FD}\InprocServer32\4.0.0.0" Name="RuntimeVersion" Value="v4.0.30319" Type="string" Action="write" />
+					<RegistryValue Root="HKCR" Key="CLSID\{A4999E32-8291-4B58-AC5C-8100A39CE0FD}\InprocServer32\4.0.0.0" Name="CodeBase" Value="file:///[#SilEncConverters40.dll]" Type="string" Action="write" />
+					<RegistryValue Root="HKCR" Key="CLSID\{A4999E32-8291-4B58-AC5C-8100A39CE0FD}\InprocServer32" Name="Class" Value="SilEncConverters40.NetRegexEncConverterConfig" Type="string" Action="write" />
+					<RegistryValue Root="HKCR" Key="CLSID\{A4999E32-8291-4B58-AC5C-8100A39CE0FD}\InprocServer32" Name="Assembly" Value="SilEncConverters40, Version=4.0.0.0, Culture=neutral, PublicKeyToken=f1447bae1e63f485" Type="string" Action="write" />
+					<RegistryValue Root="HKCR" Key="CLSID\{A4999E32-8291-4B58-AC5C-8100A39CE0FD}\InprocServer32" Name="RuntimeVersion" Value="v4.0.30319" Type="string" Action="write" />
+					<RegistryValue Root="HKCR" Key="CLSID\{A4999E32-8291-4B58-AC5C-8100A39CE0FD}\InprocServer32" Name="CodeBase" Value="file:///[#SilEncConverters40.dll]" Type="string" Action="write" />
+
+					<RegistryValue Root="HKCR" Key="CLSID\{DBE5F638-49E5-4D23-A7A5-EC83044C6A39}\Implemented Categories\{62C8FE65-4EBB-45e7-B440-6E39B2CDBF29}" Value="" Type="string" Action="write" />
+					<RegistryValue Root="HKCR" Key="CLSID\{DBE5F638-49E5-4D23-A7A5-EC83044C6A39}\InprocServer32\4.0.0.0" Name="Class" Value="SilEncConverters40.NetRegexEncConverter" Type="string" Action="write" />
+					<RegistryValue Root="HKCR" Key="CLSID\{DBE5F638-49E5-4D23-A7A5-EC83044C6A39}\InprocServer32\4.0.0.0" Name="Assembly" Value="SilEncConverters40, Version=4.0.0.0, Culture=neutral, PublicKeyToken=f1447bae1e63f485" Type="string" Action="write" />
+					<RegistryValue Root="HKCR" Key="CLSID\{DBE5F638-49E5-4D23-A7A5-EC83044C6A39}\InprocServer32\4.0.0.0" Name="RuntimeVersion" Value="v4.0.30319" Type="string" Action="write" />
+					<RegistryValue Root="HKCR" Key="CLSID\{DBE5F638-49E5-4D23-A7A5-EC83044C6A39}\InprocServer32\4.0.0.0" Name="CodeBase" Value="file:///[#SilEncConverters40.dll]" Type="string" Action="write" />
+					<RegistryValue Root="HKCR" Key="CLSID\{DBE5F638-49E5-4D23-A7A5-EC83044C6A39}\InprocServer32" Name="Class" Value="SilEncConverters40.NetRegexEncConverter" Type="string" Action="write" />
+					<RegistryValue Root="HKCR" Key="CLSID\{DBE5F638-49E5-4D23-A7A5-EC83044C6A39}\InprocServer32" Name="Assembly" Value="SilEncConverters40, Version=4.0.0.0, Culture=neutral, PublicKeyToken=f1447bae1e63f485" Type="string" Action="write" />
+					<RegistryValue Root="HKCR" Key="CLSID\{DBE5F638-49E5-4D23-A7A5-EC83044C6A39}\InprocServer32" Name="RuntimeVersion" Value="v4.0.30319" Type="string" Action="write" />
+					<RegistryValue Root="HKCR" Key="CLSID\{DBE5F638-49E5-4D23-A7A5-EC83044C6A39}\InprocServer32" Name="CodeBase" Value="file:///[#SilEncConverters40.dll]" Type="string" Action="write" />
+				</Component>
                 <Component Id="SilEncConverters40.tlb" Guid="513E71DB-F4BA-4B15-B4BD-F2F3883218E6">
                     <File Id="SilEncConverters40.tlb" Name="SilEncConverters40.tlb" Vital="yes" KeyPath="yes" Source="..\..\output\Win32\release\SilEncConverters40.tlb">
                         <TypeLib Id="{06F10557-EE67-4DAD-B3F5-031568E4DB31}" Description="Encoding Converters Repository and basic converter engine wrappers" HelpDirectory="MergeRedirectFolder" Language="0" MajorVersion="4" MinorVersion="0">
@@ -490,7 +516,10 @@
                             <Interface Id="{E5E9D505-BCF2-38CD-8F8D-CC03AA2AA6DD}" Name="_CpEncConverterConfig" ProxyStubClassId32="{00020424-0000-0000-C000-000000000046}" />
                             <Interface Id="{E689642F-2ADC-3D0A-8D4D-98687FB94DA7}" Name="_FallbackAutoConfigDialog" ProxyStubClassId32="{00020424-0000-0000-C000-000000000046}" />
                             <Interface Id="{FB89216B-03BE-30FC-B2FD-1AD0A6B75F7A}" Name="_TecEncConverterConfig" ProxyStubClassId32="{00020424-0000-0000-C000-000000000046}" />
-                        </TypeLib>
+							<Interface Id="{B20753A7-7961-417A-B24C-5824E93FB304}" Name="_NetRegexEncConverter" ProxyStubClassId32="{00020424-0000-0000-C000-000000000046}" />
+							<Interface Id="{E34A44C4-3560-4C06-B604-75E549DA5F87}" Name="_NetRegexAutoConfigDialog" ProxyStubClassId32="{00020424-0000-0000-C000-000000000046}" />
+							<Interface Id="{830276BB-4BD6-4D35-9E17-F5214C2506C4}" Name="_NetRegexEncConverterConfig" ProxyStubClassId32="{00020424-0000-0000-C000-000000000046}" />
+						</TypeLib>
                     </File>
                 </Component>
                 <Component Id="EncConvertersAppDataMover40.exe" Guid="4F57740F-5033-42f2-A41A-ED8022731CE0">
@@ -722,6 +751,25 @@
                                     <File Id="tk_image006.jpg" Name="image006.jpg" Source="..\..\redist\Help\TECkit_Map_Plug-in_About_box_files\image006.jpg"/>
                                 </Component>
                             </Directory>
+
+							<!--.Net Regex Converter Help-->
+							<Component Id="NetRegexHelp.htm" Guid="{71D37554-B6E6-4300-93AB-473DAA492542}">
+								<File Id="NetRegexHelp.htm" Name="Net_Regular_Expression_Plug-in_About_box.htm" KeyPath="yes" Source="..\..\redist\Help\Net_Regular_Expression_Plug-in_About_box.htm"/>
+								<Shortcut Id="NetRegexHelpHtm" Directory="SILConvHelp" Name=".Net Regular Expression Help" Description="View help document for the .Net Regular Expression Plug-in" IconIndex="0" Show="normal" Target="[#NetRegexHelp.htm]" WorkingDirectory="Help" Advertise="no" />
+							</Component>
+							<Directory Id="Net_Regular_Expression_Plugin_About_box" Name="Net_Regular_Expression_Plug-in_About_box_files">
+								<Component Id="Net_Regular_Expression_Plugin_About_boxComp" Guid="{9D5C5F78-AF34-4DC6-8C60-C61AEC153C6E}">
+									<File Id="netre_filelist.xml" Name="filelist.xml" KeyPath="yes" Source="..\..\redist\Help\Net_Regular_Expression_Plug-in_About_box_files\filelist.xml"/>
+									<File Id="netre_colorschememapping.xml" Name="colorschememapping.xml" Source="..\..\redist\Help\Net_Regular_Expression_Plug-in_About_box_files\colorschememapping.xml"/>
+									<File Id="netre_themedata.thmx" Name="themedata.thmx" Source="..\..\redist\Help\Net_Regular_Expression_Plug-in_About_box_files\themedata.thmx"/>
+									<File Id="netre_image001.jpg" Name="image001.jpg" Source="..\..\redist\Help\Net_Regular_Expression_Plug-in_About_box_files\image001.jpg"/>
+									<File Id="netre_image002.jpg" Name="image002.jpg" Source="..\..\redist\Help\Net_Regular_Expression_Plug-in_About_box_files\image002.jpg"/>
+									<File Id="netre_image003.jpg" Name="image003.jpg" Source="..\..\redist\Help\Net_Regular_Expression_Plug-in_About_box_files\image003.jpg"/>
+									<File Id="netre_image005.jpg" Name="image005.jpg" Source="..\..\redist\Help\Net_Regular_Expression_Plug-in_About_box_files\image005.jpg"/>
+									<File Id="netre_item0010.xml" Name="item0010.xml" Source="..\..\redist\Help\Net_Regular_Expression_Plug-in_About_box_files\item0010.xml"/>
+									<File Id="netre_props011.xml" Name="props011.xml" Source="..\..\redist\Help\Net_Regular_Expression_Plug-in_About_box_files\props011.xml"/>
+								</Component>
+							</Directory>
 
 							<Component Id="CantReadMhtFiles.htm" Guid="{2EA57953-4B0C-4A5D-A887-E9E9D100D20B}">
                                 <File Id="CantReadMhtFiles.htm" Name="CantReadMhtFiles.htm" ReadOnly="yes" KeyPath="yes" Source="..\..\redist\Help\CantReadMhtFiles.htm"/>
